--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="ripple_color_2">#B3B3BF</color>
     <color name="stroke">#006128</color>
     <color name="vector_color_1">#FEFFFF</color>
+    <color name="splash_back">#E8E8FD</color>
 </resources>
